# TurkishPropBank-C

./: CMakeLists.txt  README.md  conanfile.py
Test/: ArgumentTypeTest.c  FramesetListTest.c  PredicateListTest.c
src/: Argument.c  Argument.h  ArgumentList.c  ArgumentList.h  ArgumentType.c  ArgumentType.h  CMakeLists.txt  Frameset.c  Frameset.h  FramesetArgument.c  FramesetArgument.h  FramesetList.c  FramesetList.h  Predicate.c  Predicate.h  PredicateList.c  PredicateList.h  Role.c  Role.h  Roleset.c  Roleset.h
